Correction des problèmes de contraste

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,9 @@ body {
     margin: 0;
     padding: 0;
     background: #FFF;
+    font-family: "helvetica";
+    font-weight: 400;
+    color: #000000;
     overflow-x: hidden;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -23,7 +26,7 @@ a:hover,
 a:focus,
 button:hover,
 button:focus {
-    outline: 1px dashed #000000!important;
+    outline: 1px dashed currentColor !important;
 }
 
 #page-loading-blocs-notifaction {
@@ -50,6 +53,8 @@ button:focus {
 .bloc .container {
     padding-left: 0;
     padding-right: 0;
+    position: relative;
+    z-index: 1;
 }
 
 .bloc-lg {
@@ -108,7 +113,7 @@ button:focus {
 }
 
 .d-bloc {
-    color: rgba(255, 255, 255, .7);
+    color: rgba(255, 255, 255, 1);
 }
 
 .d-bloc button:hover {
@@ -141,7 +146,7 @@ button:focus {
 .d-bloc h5 a,
 .d-bloc h6 a,
 .d-bloc p a {
-    color: rgba(255, 255, 255, .6);
+    color: rgba(255, 255, 255, 1);
 }
 
 .d-bloc .a-btn:hover,
@@ -158,7 +163,7 @@ button:focus {
 .d-bloc h5 a:hover,
 .d-bloc h6 a:hover,
 .d-bloc p a:hover {
-    color: rgba(255, 255, 255, 1);
+    color: rgba(255, 255, 255, .9);
 }
 
 .d-bloc .navbar-toggle .icon-bar {
@@ -656,10 +661,11 @@ h6,
 p,
 label,
 .btn,
-a {
-    font-family: "helvetica";
-    font-weight: 400;
-    color: #575757!important;
+a,
+div,
+span,
+blockquote {
+    color: inherit !important;
 }
 
 .container {
@@ -738,6 +744,10 @@ h4 {
     color: #333333!important;
 }
 
+blockquote {
+    border-left: 5px solid #AA3F0E;
+}
+
 .icons {
     margin-bottom: 14px;
     margin-top: 24px;
@@ -761,7 +771,7 @@ h4 {
 }
 
 .black-background {
-    background-color: rgba(165, 147, 99, 0.7);
+    background-color: rgba(0, 0, 0, 0.6);
     padding: 40px 40px 40px 40px;
 }
 
@@ -779,21 +789,21 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #AA3F0E;
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #FFFFFF!important;
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
+    background: #AA3F0E;
     color: #FFFFFF!important;
 }
 
 .btn-atomic-tangerine:hover {
     background: #c27956!important;
-    color: #FFFFFF!important;
+    color: #000000!important;
 }
 
 .ltc-white {
@@ -805,7 +815,7 @@ h4 {
 }
 
 .ltc-atomic-tangerine {
-    color: #F3976C!important;
+    color: #AA3F0E!important;
 }
 
 .ltc-atomic-tangerine:hover {
